<resources>
    <string name="app_name">TodoTodoList</string>

    <string name="add_task">Добавить задачу</string>
    <string name="select_task">Выбрать задачи</string>
    <string name="delete_select_task">Удалить выбранные задачи</string>
    <string name="delete_all_done_task">Удалить все выполненные задачи</string>
    <string name="go_to_folder">К папкам</string>
    <string name="deleted_task">Недавно удаленные задачи</string>
    <string name="settings">Настройки</string>

    <string name="new_task">Новая задача</string>
    <string name="new_folder">Новая папка</string>
    <string name="folders">Папки</string>
    <string name="for_today">На сегодня</string>

    <string name="status">Статус: </string>

    <string name="note">Примечание</string>
    <string name="priority">Приоритет</string>
    <string name="folder">Папка</string>
    <string name="date">Срок\n</string>
    <string name="time">Время\n</string>
    <string name="reminder">Напоминание</string>
    <string name="done">Готово</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Закрыть</string>

    <string-array name="priority">
        <item>отсутствует</item>
        <item>срочно, важно</item>
        <item>срочно, не важно</item>
        <item>важно, не срочно</item>
        <item>не важно, не срочно</item>
    </string-array>

    <string-array name="folder">
        <item>на сегодня</item>
    </string-array>

    <string name="add_folder">Добавить папку</string>
    <string name="folder_add">Готово</string>
    <string name="folder_cancel">Закрыть</string>
    <string name="select_folders">Выбрать папки</string>
    <string name="delete_select_folders">Удалить выбранные папки</string>
    <string name="delete_empty_folders">Удалить пустые папки</string>

    <string name="font_size">Размер шрифта</string>
    <string name="animation">Анимация</string>
    <string name="sort">Сортировка задач</string>

    <string-array name="font_size">
        <item>маленький</item>
        <item>средний</item>
        <item>большой</item>
    </string-array>

    <string-array name="sort">
        <item>не сортировать</item>
        <item>по имени</item>
        <item>по приоритетеу</item>
        <item>по сроку</item>
    </string-array>

    <string name="delete_all_task">Удалить все задачи</string>
</resources>
