<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_task"
        android:orderInCategory="1"
        android:title="@string/add_task"/>
    <item
        android:id="@+id/select_task"
        android:orderInCategory="2"
        android:title="@string/select_task"/>
    <item
        android:id="@+id/delete_select_task"
        android:orderInCategory="3"
        android:title="@string/delete_select_task"/>
    <item
        android:id="@+id/delete_all_done_task"
        android:orderInCategory="4"
        android:title="@string/delete_all_done_task"/>
    <item
        android:id="@+id/go_to_folder"
        android:orderInCategory="5"
        android:title="@string/go_to_folder"/>
    <item
        android:id="@+id/deleted"
        android:orderInCategory="6"
        android:title="@string/deleted_task"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="7"
        android:title="@string/settings"/>
</menu>