<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.los.manya.todotodolist.NewTaskActivity">

    <TextView
        android:id="@+id/new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/new_task" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_task"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/note" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:entries="@array/priority"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_note" />

    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="220dp"
        android:layout_height="22dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/priority" />

    <TextView
        android:id="@+id/folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/folder"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/priority_spinner" />

    <Spinner
        android:id="@+id/folder_spinner"
        android:layout_width="222dp"
        android:layout_height="23dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/folder" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/folder_spinner" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:onClick="TimeonClick"
        android:clickable="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/date"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.502"
        app:layout_constraintRight_toRightOf="parent" />

    <Switch
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/time" />

</android.support.constraint.ConstraintLayout>
